[package]
name = "encrypted-box"
version = "0.1.0"
authors = ["matan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.28"
sha2 = "0.8.1"
failure = "0.1.7"
structopt = "0.2.18"
base64 = "0.12.0"
exitfailure = "0.5.1"
assert_cmd = "0.10"
predicates = "1"
tempfile = "3"
rand = "0.7.3"